// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormAndReviewList component add button calls add event 1`] = `
<div
  className="form-and-review-list "
>
  <FormAndReviewItem
    collapsedComponent={[MockFunction]}
    expandedComponent={[MockFunction]}
    index={0}
    initialExpanded={false}
    item={
      Object {
        "key": "item 1",
      }
    }
    key="item 1"
    onCancelClick={null}
    onDeleteClick={[Function]}
  />
  <FormAndReviewItem
    collapsedComponent={[MockFunction]}
    expandedComponent={[MockFunction]}
    index={1}
    initialExpanded={true}
    item={
      Object {
        "key": "item2",
      }
    }
    key="item2"
    onCancelClick={null}
    onDeleteClick={[Function]}
  />
  <Button
    className="visibility--screen"
    component="button"
    onClick={[Function]}
    type="button"
  >
    text for adding a new button
  </Button>
</div>
`;

exports[`FormAndReviewList component expands and collapses items 1`] = `
<FormAndReviewItem
  collapsedComponent={[Function]}
  expandedComponent={[Function]}
  index={1}
  initialExpanded={false}
  onCancelClick={null}
  prop1="passed down"
  prop2="passed down"
  prop3="passed down"
>
  <div
    className="form-and-review-list--item__collapsed"
  >
    <Collapsed
      expand={[Function]}
      index={1}
      prop1="passed down"
      prop2="passed down"
      prop3="passed down"
    >
      <div />
    </Collapsed>
  </div>
</FormAndReviewItem>
`;

exports[`FormAndReviewList component expands and collapses items 2`] = `
<FormAndReviewItem
  collapsedComponent={[Function]}
  expandedComponent={[Function]}
  index={1}
  initialExpanded={false}
  onCancelClick={null}
  prop1="passed down"
  prop2="passed down"
  prop3="passed down"
>
  <div
    className="form-and-review-list--item__expanded"
  >
    <Expanded
      collapse={[Function]}
      index={1}
      prop1="passed down"
      prop2="passed down"
      prop3="passed down"
      setFormValid={[Function]}
    >
      <div />
    </Expanded>
    <Button
      className="ds-u-margin-right--2"
      component="button"
      onClick={[Function]}
      type="button"
    >
      <button
        className="ds-c-button ds-u-margin-right--2"
        onClick={[Function]}
        type="button"
      >
        Cancel
      </button>
    </Button>
    <Button
      component="button"
      disabled={false}
      id="form-and-review-list--done-btn"
      onClick={[Function]}
      type="button"
      variation="primary"
    >
      <button
        className="ds-c-button ds-c-button--primary"
        disabled={false}
        id="form-and-review-list--done-btn"
        onClick={[Function]}
        type="button"
      >
        Save
      </button>
    </Button>
  </div>
</FormAndReviewItem>
`;

exports[`FormAndReviewList component expands and collapses items 3`] = `
<FormAndReviewItem
  collapsedComponent={[Function]}
  expandedComponent={[Function]}
  index={1}
  initialExpanded={false}
  onCancelClick={null}
  prop1="passed down"
  prop2="passed down"
  prop3="passed down"
>
  <div
    className="form-and-review-list--item__collapsed"
  >
    <Collapsed
      expand={[Function]}
      index={1}
      prop1="passed down"
      prop2="passed down"
      prop3="passed down"
    >
      <div />
    </Collapsed>
  </div>
</FormAndReviewItem>
`;

exports[`FormAndReviewList component renders properly with a custom class name 1`] = `
<div
  className="form-and-review-list test-class"
>
  <FormAndReviewItem
    collapsedComponent={[MockFunction]}
    expandedComponent={[MockFunction]}
    index={0}
    initialExpanded={false}
    item={
      Object {
        "initialExpanded": false,
        "key": "one",
      }
    }
    key="one"
    onCancelClick={null}
    onDeleteClick={[Function]}
  />
  <FormAndReviewItem
    collapsedComponent={[MockFunction]}
    expandedComponent={[MockFunction]}
    index={1}
    initialExpanded={false}
    item={
      Object {
        "initialExpanded": true,
        "key": "two",
      }
    }
    key="two"
    onCancelClick={null}
    onDeleteClick={[Function]}
  />
  <Button
    className="visibility--screen"
    component="button"
    onClick={[Function]}
    type="button"
  >
    text for adding a new button
  </Button>
</div>
`;

exports[`FormAndReviewList component renders properly with just one item 1`] = `
<div
  className="form-and-review-list "
>
  <FormAndReviewItem
    collapsedComponent={[MockFunction]}
    expandedComponent={[MockFunction]}
    index={0}
    initialExpanded={false}
    item={
      Object {
        "key": "one",
      }
    }
    key="one"
    onCancelClick={null}
    onDeleteClick={null}
  />
  <Button
    className="visibility--screen"
    component="button"
    onClick={[Function]}
    type="button"
  >
    text for adding a new button
  </Button>
</div>
`;

exports[`FormAndReviewList component renders properly with just one item and allowDeleteAll set to true 1`] = `
<div
  className="form-and-review-list "
>
  <FormAndReviewItem
    collapsedComponent={[MockFunction]}
    expandedComponent={[MockFunction]}
    index={0}
    initialExpanded={false}
    item={
      Object {
        "key": "one",
      }
    }
    key="one"
    onCancelClick={null}
    onDeleteClick={[Function]}
  />
  <Button
    className="visibility--screen"
    component="button"
    onClick={[Function]}
    type="button"
  >
    text for adding a new button
  </Button>
</div>
`;

exports[`FormAndReviewList component renders properly with multiple items 1`] = `
<div
  className="form-and-review-list "
>
  <FormAndReviewItem
    collapsedComponent={[MockFunction]}
    expandedComponent={[MockFunction]}
    index={0}
    initialExpanded={false}
    item={
      Object {
        "initialExpanded": false,
        "key": "one",
      }
    }
    key="one"
    onCancelClick={null}
    onDeleteClick={[Function]}
  />
  <FormAndReviewItem
    collapsedComponent={[MockFunction]}
    expandedComponent={[MockFunction]}
    index={1}
    initialExpanded={false}
    item={
      Object {
        "initialExpanded": true,
        "key": "two",
      }
    }
    key="two"
    onCancelClick={null}
    onDeleteClick={[Function]}
  />
  <Button
    className="visibility--screen"
    component="button"
    onClick={[Function]}
    type="button"
  >
    text for adding a new button
  </Button>
</div>
`;

exports[`FormAndReviewList component renders properly with no items 1`] = `
<div
  className="form-and-review-list "
>
  <div>
    <p
      className="ds-u-margin-top--4"
    >
      displayed when there is no data
    </p>
  </div>
  <Button
    className="visibility--screen"
    component="button"
    onClick={[Function]}
    type="button"
  >
    text for adding a new button
  </Button>
</div>
`;

exports[`FormAndReviewList component renders properly with no items and noDataMessage set to false 1`] = `
<div
  className="form-and-review-list "
>
  <Button
    className="visibility--screen"
    component="button"
    onClick={[Function]}
    type="button"
  >
    text for adding a new button
  </Button>
</div>
`;

exports[`FormAndReviewList component renders properly without an add button if the onAddClick prop is missing 1`] = `
<div
  className="form-and-review-list "
>
  <div>
    <p
      className="ds-u-margin-top--4"
    >
      displayed when there is no data
    </p>
  </div>
</div>
`;
